--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <div class="kicker">Conteúdo informativo</div>
 <h1>Aposentados e pensionistas com doenças graves podem ter direito à isenção do Imposto de Renda</h1>
 <p>Você sabia que também é possível solicitar a restituição dos valores pagos nos últimos 5 anos? Entenda como funciona esse direito garantido por lei.</p>
-<a class="cta" href="#form"><span>Quero saber mais</span><span>→</span></a>
+<a class="cta" href="https://wa.me/5548991265911?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20isen%C3%A7%C3%A3o%20de%20IR%20para%20aposentados%20e%20pensionistas%20com%20doen%C3%A7as%20graves." target="_blank" rel="noopener"><span>Quero atendimento jurídico</span><span>→</span></a>
 </div>
 <aside aria-label="Resumo do tema" class="hero-card">
 <h3>Em linguagem simples:</h3>
@@ -149,15 +149,16 @@
 </section>
 <section class="form-section animate-on-scroll" id="form">
 <div class="container">
-<h2 class="section-title">Quero tirar minhas dúvidas</h2>
-<p class="section-subtitle">Preencha o formulário abaixo para receber informações seguras sobre seu caso. <strong>Atendimento sigiloso e personalizado.</strong></p>
-<form>
-<div class="form-group full"><label for="nome">Nome completo</label><input id="nome" name="nome" placeholder="Digite seu nome completo" required="" type="text"/></div>
-<div class="form-group"><label for="email">E-mail</label><input id="email" name="email" placeholder="seu@email.com" required="" type="email"/></div>
-<div class="form-group"><label for="telefone">Telefone/WhatsApp</label><input id="telefone" name="telefone" placeholder="(00) 00000-0000" required="" type="tel"/></div>
-<div class="form-group full"><label for="mensagem">Mensagem</label><textarea id="mensagem" name="mensagem" placeholder="Conte, em poucas palavras, sua situação. Isso nos ajuda a oferecer uma orientação mais precisa."></textarea></div>
-<div class="form-group full"><button aria-label="Enviar formulário" class="primary" type="submit">Quero saber mais</button><p class="disclaimer">Ao enviar, você concorda em ser contatado(a) para fins de orientação informativa. Seus dados estão protegidos e não serão compartilhados.</p></div>
-</form>
+<h2 class="section-title">
+<a
+  class="primary"
+  href="https://wa.me/5548991265911?text=Ol%C3%A1!%20Gostaria%20de%20atendimento%20jur%C3%ADdico%20sobre%20isen%C3%A7%C3%A3o%20de%20IR."
+  target="_blank"
+  rel="noopener"
+  aria-label="Quero atendimento jurídico via WhatsApp"
+>QUERO ATENDIMENTO JURÍDICO</a>
+</strong></p>
+
 </div>
 </section>
 </main>
@@ -172,7 +173,7 @@
 </div>
 </div>
 </footer>
-<a class="floating-cta" href="https://wa.me/5548991265911?text=Olá! Gostaria de saber mais sobre isenção de IR para aposentados e pensionistas com doenças graves." rel="noopener" target="_blank">WhatsApp</a>
+<a style="position:fixed;right:20px;bottom:20px;z-index:9999;" class="floating-cta" href="https://wa.me/5548991265911?text=Ol%C3%A1!%20Gostaria%20de%20atendimento%20jur%C3%ADdico%20sobre%20isen%C3%A7%C3%A3o%20de%20IR." rel="noopener" target="_blank" href="https://wa.me/5548991265911?text=Ol%C3%A1!%20Gostaria%20de%20atendimento%20jur%C3%ADdico%20sobre%20isen%C3%A7%C3%A3o%20de%20IR." target="_blank" rel="noopener" href="https://wa.me/5548991265911?text=Ol%C3%A1!%20Gostaria%20de%20atendimento%20jur%C3%ADdico%20sobre%20isen%C3%A7%C3%A3o%20de%20IR." target="_blank" rel="noopener" aria-label="Atendimento via WhatsApp">WhatsApp</a>
 <script>
     window.addEventListener('scroll',()=>{document.getElementById('header').classList.toggle('scrolled',window.scrollY>100)});
     const observer=new IntersectionObserver(e=>{e.forEach(x=>{if(x.isIntersecting)x.target.classList.add('visible')})},{threshold:.1,rootMargin:'0px 0px -50px 0px'});document.querySelectorAll('.animate-on-scroll').forEach(el=>observer.observe(el));
